Add header semantic section

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
+  <title>My Hobby</title>
+  <meta charset="utf-8">
+  <style>
+    header {
+      background: yellow;
+    }
+  </style>
 </head>
 <body>
-
+  <header>
+    Soccer: World's Most Popular Sport
+    <nav class="menu">
+      <ul>
+        <li>Home</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
