Add Youtube videos with drills & inspiration

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       float: left;
       padding: 0 10px 0 0;
     }
+
+/*    h1 {
+      font-size: 2em;
+    }
+
+    h2 {
+      font-size: 1.5em;
+    }*/
   </style>
 </head>
 <body>
@@ -41,13 +49,13 @@
   <section id="main">
     <article>
       <h1> Things to work on to be the best you can be: </h1>
-        <h2>Alone:</h2>
+        <p>Alone:</p>
           <ul>
             <li>Strength</li>
             <li>Flexibility</li>
             <li>Endurance</li>
           </ul>
-        <h2>As a team</h2>
+        <p>As a team</p>
           <ul>
             <li>Communication during the game</li>
             <li>Accountability in training and resting</li>
@@ -55,9 +63,17 @@
     </article>
 
     <article>
-      <p> Here are some videos with drills:</p>
+      <p> Here is a video with solo practice drills:</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/-pPWe8Rjl9U" frameborder="0" allowfullscreen>
+      </iframe>
+      <p> Here is one for inspiration </p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/O0tOaA_p6LE" frameborder="0" allowfullscreen>
+      </iframe>
 
     </article>
   </section>
+  <footer>
+    &copy; HereToInfinity
+  </footer>
 </body>
 </html>
