--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
       padding: 0 10px 0 0;
     }
 
+    img {
+      width: 100px;
+      height: 100px;
+    }
+
+    /*#main {
+      box-sizing: border-box;
+      width: 75%;
+      margin: 0;
+      float: left;
+    }
+
+    aside {
+      box-sizing: border-box;
+      width: 25%;
+      float: left;
+    }*/
+
 /*    h1 {
       font-size: 2em;
     }
@@ -64,16 +82,32 @@
 
     <article>
       <p> Here is a video with solo practice drills:</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/-pPWe8Rjl9U" frameborder="0" allowfullscreen>
+      <iframe src="https://www.youtube.com/embed/-pPWe8Rjl9U" frameborder="0" allowfullscreen>
       </iframe>
       <p> Here is one for inspiration </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/O0tOaA_p6LE" frameborder="0" allowfullscreen>
+      <iframe src="https://www.youtube.com/embed/O0tOaA_p6LE" frameborder="0" allowfullscreen>
       </iframe>
 
     </article>
   </section>
+  <section>
+
+  </section>
+  <aside>
+    <form>
+      <fieldset>
+        <legend>Sign up to our mailing list to get updates:</legend>
+        <label>Name:<input name="name" type="text"></label>
+        <label>Email:<input name="email" type="email"></label>
+        <button type="submit">Submit</button>
+      </fieldset>
+    </form>
+  </aside>
+
   <footer>
-    &copy; HereToInfinity
+    Brought to you by: HereToInfinity
+    <img src="ball.jpg">
+
   </footer>
 </body>
 </html>
