--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>My Hobby</title>
   <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <style>
     * {
       box-sizing: border-box;
