Solve validator issues witheadings

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
   </header>
 
   <section id="main">
+    <h2>What I have learned over the years:</h2>
     <article>
-      <h1> Things to work on to be the best you can be: </h1>
+      <h3> Things to work on to be the best you can be: </h3>
         <p>Alone:</p>
           <ul>
             <li>Strength</li>
@@ -82,14 +83,22 @@
     </article>
 
     <article>
-      <p> Here is a video with solo practice drills:</p>
-      <iframe src="https://www.youtube.com/embed/-pPWe8Rjl9U" frameborder="0" allowfullscreen>
+      <h3> Here is a video with solo practice drills:</h3>
+      <iframe src="https://www.youtube.com/embed/-pPWe8Rjl9U"  allowfullscreen>
       </iframe>
     </article>
-  </section>
-  <section>
 
+    <article>
+      <h3> Here is a resource if you are coaching: </h3>
+      <a href="https://www.soccercoachweekly.net/soccer-drills-and-skills-best/">Soccer drills and
+      skills for kids</a>
+      <p> This site is great if you are a parent and don't
+      know where to start to coach your kids. The site also
+      gives you suggestions if you are too busy to figure out
+      how to find the time to learn to coach. </p>
+    </article>
   </section>
+
   <aside>
     <form>
       <fieldset>
@@ -103,7 +112,7 @@
 
   <footer>
     Brought to you by: HereToInfinity
-    <img src="ball.jpg">
+    <img src="ball.jpg" alt="ball image">
 
   </footer>
 </body>
