Add style sheet

--- a/index.html
+++ b/index.html
@@ -4,55 +4,8 @@
   <title>My Hobby</title>
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    * {
-      box-sizing: border-box;
+  <link rel="stylesheet" href="style.css">
 
-    }
-    header {
-      background: yellow
-    }
-
-    nav > ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: inline-block;
-      /*float: left;*/
-    }
-
-    .menu li {
-      display: inline;
-      float: left;
-      padding: 0 10px 0 0;
-    }
-
-    img {
-      width: 100px;
-      height: 100px;
-    }
-
-    /*#main {
-      box-sizing: border-box;
-      width: 75%;
-      margin: 0;
-      float: left;
-    }
-
-    aside {
-      box-sizing: border-box;
-      width: 25%;
-      float: left;
-    }*/
-
-/*    h1 {
-      font-size: 2em;
-    }
-
-    h2 {
-      font-size: 1.5em;
-    }*/
-  </style>
 </head>
 <body>
   <header>
