--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
     <article>
       <h3> Here is a resource if you are coaching: </h3>
-      <a href="https://www.soccercoachweekly.net/soccer-drills-and-skills-best/">Soccer drills and
+      <a class="style" href="https://www.soccercoachweekly.net/soccer-drills-and-skills-best/">Soccer drills and
       skills for kids</a>
-      <p> This site is great if you are a parent and don't
+      <p class="style"> This site is great if you are a parent and don't
       know where to start to coach your kids. The site also
       gives you suggestions if you are too busy to figure out
       how to find the time to learn to coach. </p>
