Change section with id 'main' to semantic main tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <section id="main">
+  <main>
     <h2>What I have learned over the years:</h2>
     <article>
       <h3> Things to work on to be the best you can be: </h3>
@@ -50,7 +50,7 @@
       gives you suggestions if you are too busy to figure out
       how to find the time to learn to coach. </p>
     </article>
-  </section>
+  </main>
 
   <aside>
     <form>
